dovecot/dovecot-pigeonhole/tests/extensions/include/errors/generic.sieve
require "include";

# Non-existent sieve script
include "frop.sieve";

# Use of / in script names
include "../frop.sieve";
